@@ -1,9 +1,6 @@
 Bugs
 ----
 
-* You can't deepcopy a tree if it was created with the html.parser
-  tree builder.
-
 * html5lib doesn't support SoupStrainers, which is OK, but there
   should be a warning about it.
 
